--- a/websites/BPN/www/site/compiled-dev/css/intro.css
+++ b/websites/BPN/www/site/compiled-dev/css/intro.css
@@ -14,13 +14,14 @@
   top: 50%;
 }
 .intro__content__bpn-logo {
+  transform: translateY(5.5px);
   animation: logoIn 1.8s forwards;
 }
 .intro__content__loader {
   position: absolute;
   margin: 0 auto;
-  width: 190px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -35,8 +36,8 @@
 .bar, .orbit {
   position: absolute;
   margin: 0 auto;
-  width: 160px;
-  height: 160px;
+  width: 270px;
+  height: 270px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -66,7 +67,7 @@
   transform: rotate(0deg);
   border-color: #097ABB;
   left: 0;
-  top: 0;
+  top: 0px;
   z-index: 3;
   animation: rotateLoader 1.5s 0s linear infinite;
 }
